fix cors url bug